--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,11 @@
             "email": "crazyone@crazycoders.net"
         }
     ],
-    "require": {
-	   "phpunit/phpunit": "3.7.*"
+    "require-dev": {
+	   "phpunit/phpunit": "3.7.*",
+       "phpdocumentor/phpdocumentor": "dev-release-2.0"
     },
+    "minimum-stability": "dev",
     "autoload": {
         "psr-0": {
             "CrazyCodr\\": "src/"
