--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
             "email": "crazyone@crazycoders.net"
         }
     ],
+    "require": {
+        "php": ">=5.3.0",
+    },
     "require-dev": {
         "phpunit/phpunit": "3.7.*",
         "phpdocumentor/phpdocumentor": "2.*"
