--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "php": ">=5.3.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*",
-        "phpdocumentor/phpdocumentor": "2.*"
+        "phpunit/phpunit": "3.7.*"
     },
     "minimum-stability": "dev",
     "autoload": {
